frontend/sass/utils/_cards.sass
// Card styles, with clear separation of concerns
@use '../mix/mixins' as mix
@use '../colors/colors' as color

.card-container
    p
        font-size: 1em
        text-align: justify
        
    h3, h4
        @include mix.font-style("Nunito")

    .tech
        @include mix.list-inline-reset()

        ul
            li
                cursor: default
                padding-inline: 1em
                border-radius: .5em
                border: 1px solid black
        
        
    max-inline-size: 24em
    border-radius: .5em
    border: 1px solid black

    //@include mix.link-styles()
    @include mix.card-shadow-box()
    
.timeline-card
    h3
        margin-inline: 1em
        @include mix.font-style("Roboto")

.business-card
    &.grid-layout
        .card-header
            figure
                figcaption
                    display: none

                margin: 0

            margin: 0
            padding: 0
            display: flex
            inline-size: 100%
            min-block-size: 0
            grid-area: header
            align-items: center
            justify-content: space-between

            .tech-img, .tech-figure
                inline-size: 2.2em !important
                block-size: 2.2em !important
                object-fit: contain !important
                margin: 0 !important

            .date-container
                margin: 0
                display: block
                text-align: right
                margin-left: auto

        .card-content
            h3
                margin: 0
                padding: 0.5rem 0
            p
                margin-block: 0.25rem

            padding: 0
            grid-area: content
            
        .card-nav
            grid-area: nav
            padding-block: 0.25rem
            
        .card-footer
            h4
                font-size: 0.9em
                margin-block-end: 0.25rem
            
            .tech-img, .tech-figure
                margin: 0 !important
                inline-size: 2em !important
                block-size: 2em !important
                object-fit: contain !important

            figure
                figcaption
                    display: none

                margin: 0

            grid-area: footer
            padding: 0
            margin: 0

        gap: 0.25rem
        display: grid
        padding: 0.75rem
        align-content: center
        grid-template-rows: auto auto auto 1fr
        grid-template-areas: "header" "content" "nav" "footer"
        

    p
        font-size: 1em
        text-align: center
        margin: 0.25rem 0

    img 
        border-radius: 0

    section
        margin-block-end: 0em

    .card-content
        .icon
            padding: 0
            font-size: 2em

        h3
            span.icon
                padding: 0
                font-size: 1em
            inline-size: 100%

    .tech-container
        img
            inline-size: 1.5em
            block-size: 1.5em
            object-fit: contain

    inline-size: 23em
    max-block-size: 23em
    border: 1px solid black
    @include mix.link-styles(color.$logo-red, color.$dark-orange, color.$light-orange, color.$logo-red)
    @include mix.card-shadow-box()
    @include mix.list-inline-reset()
    
    .credits
        font-size: 0.9em
        margin-block: 0.5rem
        
        .collab-name
            margin: 0.1rem 0.25rem
            span
                display: inline-flex
                align-items: center
                flex-wrap: wrap
                
                a
                    display: inline-flex
                    align-items: center
                    gap: 0.2rem
                    margin-inline: 0.2rem
                    
                    .icon
                        font-size: 1.1em
                        margin: 0

    @include mix.background-image(9em, "/media/images/cards/portfolio-card.svg")
    

